# open-procedures

./: .gitignore  README.md  create_procedures_db.py  create_vector_db.py  generate_vector_db.py  main.py  pyproject.toml  text_db.json  vector_db.json
procedures/: 1.txt  2.txt  CondaShortcutCreation.txt  applications.txt  download_youtube.txt  edit_audio.txt  edit_video.txt  emails.txt  extract_pdf_text.txt  file_conversion.txt  get_calendar_events.txt  handle_traceback.txt  html.txt  lt.txt  mac_get_emails.txt  mac_say.txt  os_actions.txt  play_youtube.txt  simple_app.txt  summarize.txt  system_settings.txt  web_browsing.txt
