[tool.poetry]
name = "open-procedures"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
scikit-learn = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
