[tool.poetry]
name = "open-procedures"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
openai = "^0.28.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
scikit-learn = "^1.3.0"
Markdown = "^3.4.4"
CacheControl = "^0.13.1"
chromadb = "^0.4.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
